force-app/main/default/objects/Reference_MPSC__c/Reference_MPSC__c.object-meta.xml
<CustomObject>
    <label>Reference MPSC</label>
    <nameField>
        <displayFormat>MPSC-{00000000}</displayFormat>
        <label>Reference MPSC Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reference MPSCs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>