force-app/main/default/objects/Reference_MPSC__c/fields/All_Products_Validated__c.field-meta.xml
<CustomField>
    <fullName>All_Products_Validated__c</fullName>
    <label>All Products Validated</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>