force-app/main/default/objects/Reference_MPSC__c/fields/Client_Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Client_Time_Zone__c</fullName>
    <label>Client Time Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AZ</fullName>
            </value>
            <value>
                <fullName>CST</fullName>
            </value>
            <value>
                <fullName>IN</fullName>
            </value>
            <value>
                <fullName>MSP</fullName>
            </value>
            <value>
                <fullName>PST</fullName>
            </value>
            <value>
                <fullName>EST</fullName>
            </value>
            <value>
                <fullName>Hawaii</fullName>
            </value>
            <value>
                <fullName>Alaska</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>