force-app/main/default/objects/Reference_MPSC__c/fields/EE_Demographic_Data_Scanned__c.field-meta.xml
<CustomField>
    <fullName>EE_Demographic_Data_Scanned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EE Demographic Data Scanned</label>
    <type>Checkbox</type>
</CustomField>