force-app/main/default/objects/Reference_MPSC__c/fields/Is_client_willing_to_be_a_reference__c.field-meta.xml
<CustomField>
    <fullName>Is_client_willing_to_be_a_reference__c</fullName>
    <label>Is client willing to be a reference?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>