force-app/main/default/objects/Reference_MPSC__c/fields/Is_the_client_unresponsive__c.field-meta.xml
<CustomField>
    <fullName>Is_the_client_unresponsive__c</fullName>
    <label>Is the client unresponsive?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>