force-app/main/default/objects/Reference_MPSC__c/fields/MPSC_Account_Health__c.field-meta.xml
<CustomField>
    <fullName>MPSC_Account_Health__c</fullName>
    <formula>TEXT(Case_Lookup__r.Account.MPSC_Account_Health__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MPSC Account Health</label>
    <type>Text</type>
</CustomField>