force-app/main/default/objects/Reference_MPSC__c/fields/Readychex__c.field-meta.xml
<CustomField>
    <fullName>Readychex__c</fullName>
    <description>This field is being populated by the information from the Product Indicators section of the Prospect-Client record.</description>
    <formula>IF(Case_Lookup__r.Account.Readychex__c = True, &apos;Yes&apos;, &apos;No&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Readychex</label>
    <type>Text</type>
</CustomField>