force-app/main/default/objects/Reference_MPSC__c/fields/Reference_Core_Payroll__c.field-meta.xml
<CustomField>
    <fullName>Reference_Core_Payroll__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reference Core Payroll</label>
    <referenceTo>Reference_Core_Payroll__c</referenceTo>
    <relationshipLabel>Reference MPSCs</relationshipLabel>
    <relationshipName>Reference_MPSCs</relationshipName>
    <type>Lookup</type>
</CustomField>