force-app/main/default/objects/Reference_MPSC__c/fields/X2_Successful_PRs_w_Limited_Assistance__c.field-meta.xml
<CustomField>
    <fullName>X2_Successful_PRs_w_Limited_Assistance__c</fullName>
    <label>2 Successful PRs w/Limited Assistance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>