force-app/main/default/objects/Reference_MPSC__c/recordTypes/Reference_MPSC_Transfer.recordType-meta.xml
<RecordType>
    <fullName>Reference_MPSC_Transfer</fullName>
    <active>true</active>
    <label>Reference MPSC Transfer</label>
</RecordType>