force-app/main/default/objects/Reference_MPSC__c/validationRules/Contact_for_Concern.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_for_Concern</fullName>
    <active>true</active>
    <description>Contact for Concerns is required</description>
    <errorConditionFormula>AND( NOT(ISBLANK(TEXT(  Status_Onboarding_Products_Outside_MPSC__c  ) )),
ISBLANK(  Contact_for_Concerns__c  ) )</errorConditionFormula>
    <errorMessage>Contact for Concerns is required</errorMessage>
</ValidationRule>