force-app/main/default/objects/Reference_MPSC__c/validationRules/Force_populated_PayrollRatingIssues.validationRule-meta.xml
<ValidationRule>
    <fullName>Force_populated_PayrollRatingIssues</fullName>
    <active>true</active>
    <description>If Payroll Rating is Not Complete, force Payroll Rating Issues to be populated</description>
    <errorConditionFormula>AND(
( (ISPICKVAL(Payroll_Rating__c, &apos;Not Complete&apos;)) ),
( ISBLANK(Payroll_Rating_Issues__c) ),
 $Profile.Name &lt;&gt;&quot;System Administrator&quot;
)</errorConditionFormula>
    <errorDisplayField>Payroll_Rating_Issues__c</errorDisplayField>
    <errorMessage>You must select at least one Payroll Rating Issues value if the Payroll Rating is &apos;Not Complete&apos;</errorMessage>
</ValidationRule>