force-app/main/default/objects/Reference_MPSC__c/validationRules/must_populate_C2C_Ids.validationRule-meta.xml
<ValidationRule>
    <fullName>must_populate_C2C_Ids</fullName>
    <active>true</active>
    <description>If C2C is Yes, then # of C2C IDs  and C2C Relationship type must be populated</description>
    <errorConditionFormula>NOT(BEGINS($Profile.Name,&apos;System Administrator&apos;)) &amp;&amp; ISPICKVAL(C2C__c , &apos;Yes&apos;) &amp;&amp; (ISNULL(of_C2C_ID_s__c ) || ISNULL(C2C_Relationship_Type__c))</errorConditionFormula>
    <errorMessage>You must populate # of C2C IDs and C2C Relationship Type.</errorMessage>
</ValidationRule>