force-app/main/default/objects/Reference_MPSC__c/validationRules/Payroll_Rating_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Payroll_Rating_is_required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(INCLUDES(Payroll_Rating_Issues__c,&quot;Other (Notes field)&quot;),
ISBLANK(Payroll_Rating_Other_Notes__c))</errorConditionFormula>
    <errorDisplayField>Payroll_Rating_Other_Notes__c</errorDisplayField>
    <errorMessage>Please enter Payroll Rating Notes</errorMessage>
</ValidationRule>