force-app/main/default/objects/Reference_MPSC__c/validationRules/Payroll_Training_fields_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Payroll_Training_fields_required</fullName>
    <active>false</active>
    <errorConditionFormula>AND(NOT(ISBLANK(TEXT( Payroll_Training_Completed__c  ))),
NOT(BEGINS($Profile.Name, &quot;System Admin&quot;)),
OR(
ISBLANK(TEXT( All_Open_Items_Addressed_and_Resolved__c )),
ISBLANK(TEXT( Status_Onboarding_Products_Outside_MPSC__c  )),
ISBLANK(TEXT( X2_Successful_PRs_w_Limited_Assistance__c  )),
ISBLANK(TEXT(  Pre_Post_Audits_Complete_w_out_Issues__c  )),
ISBLANK(TEXT(  Multi_State_EEs_Setup_Accurately__c  )),
ISBLANK(TEXT(  Multi_State_EEs_SUI_Rates_Verified__c  )),
ISBLANK(TEXT(  Client_Degree_of_Self_Service__c ))))</errorConditionFormula>
    <errorMessage>Fields required :
&quot;2 Successful PRs...&quot;, &quot;Status-Onboarding Products...&quot;
&quot;All Open Items Addressed..&quot;,
&quot;Pre/Post Audits Complete..&quot;,
&quot;Multi-State EEs Setup Accurately?&quot;,
&quot;Multi-State EEs SUI Rates Verified?&quot;
&quot;Client Degree of Self Service&quot;</errorMessage>
</ValidationRule>