force-app/main/default/objects/Reference_MPSC__c/validationRules/Prevent_ReferenceMPSC_grandchildren.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_ReferenceMPSC_grandchildren</fullName>
    <active>true</active>
    <description>Prevent a Reference MPSC grandchildren situation</description>
    <errorConditionFormula>NOT(ISBLANK(Reference_MPSC_Parent__r.Reference_MPSC_Parent__c))</errorConditionFormula>
    <errorDisplayField>Reference_MPSC_Parent__c</errorDisplayField>
    <errorMessage>You cannot add a Reference MPSC record to the Reference MPSC Parent field, that already has a populated Reference MPSC Parent value.</errorMessage>
</ValidationRule>