force-app/main/default/objects/Reference_MPSC__c/validationRules/Required_if_All_tax_Agencies_setup_is_no.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_if_All_tax_Agencies_setup_is_no</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(All_Tax_Agencies_Setup__c , &apos;no&apos;)&amp;&amp;  ISBLANK(If_Agencies_not_setup_why__c)</errorConditionFormula>
    <errorDisplayField>If_Agencies_not_setup_why__c</errorDisplayField>
    <errorMessage>If &quot;All Tax Agencies Setup&quot; is no, you much populate &quot;If Agencies not set up, why?&quot; field.</errorMessage>
</ValidationRule>