force-app/main/default/objects/Reference_MPSC__c/validationRules/Stand_Alone_and_Lost_Product_cannot_both.validationRule-meta.xml
<ValidationRule>
    <fullName>Stand_Alone_and_Lost_Product_cannot_both</fullName>
    <active>true</active>
    <description>You can&apos;t check Stand Alone Product and Lost Product for the same product.</description>
    <errorConditionFormula>OR( AND(Lost_Product_Flex_HR__c = TRUE, 
Stand_alone_Flex_HR__c = TRUE), 
AND(Lost_Product_TAA__c = TRUE, 
Stand_alone_TAA__c = TRUE))</errorConditionFormula>
    <errorMessage>The same product cannot be stand alone and lost.</errorMessage>
</ValidationRule>