force-app/main/default/objects/Reference_MPSC__c/listViews/Enterprise_Transfer_Specialist_Queue_Reference_MPSC.listView-meta.xml
<ListView>
    <fullName>Enterprise_Transfer_Specialist_Queue_Reference_MPSC</fullName>
    <columns>NAME</columns>
    <columns>Branch_Client_ID__c</columns>
    <columns>Prospect_Client__c</columns>
    <columns>Transfer_Specialist__c</columns>
    <columns>Transfer_Call_Type__c</columns>
    <columns>Date_Ready_for_Transition__c</columns>
    <columns>List_Multi_IDs__c</columns>
    <columns>ASO__c</columns>
    <columns>Client_Time_Zone__c</columns>
    <columns>Payroll_IS__c</columns>
    <columns>Payroll_BSR__c</columns>
    <columns>Stand_alone_TAA__c</columns>
    <columns>Stand_alone_Flex_HR__c</columns>
    <columns>Transfer_Coordinator_Notes__c</columns>
    <filterScope>Queue</filterScope>
    <label>Enterprise Transfer Specialist Queue</label>
    <queue>Enterprise_Transfer_Specialist_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>