force-app/main/default/objects/Reference_MPSC__c/listViews/IMPSC_943_Reference_MPSC.listView-meta.xml
<ListView>
    <fullName>IMPSC_943_Reference_MPSC</fullName>
    <filterScope>Queue</filterScope>
    <label>IMPSC 943</label>
    <queue>IMPSC_943</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>