force-app/main/default/objects/Reference_MPSC__c/listViews/My_MPSC_Transfer_Objects.listView-meta.xml
<ListView>
    <fullName>My_MPSC_Transfer_Objects</fullName>
    <columns>NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Case_Lookup__c</columns>
    <columns>Prospect_Client__c</columns>
    <columns>Branch_Client_ID__c</columns>
    <columns>Current_Step__c</columns>
    <columns>Transfer_Call_Type__c</columns>
    <columns>Payroll_ready_to_Transfer_Date__c</columns>
    <columns>TAA_IS__c</columns>
    <columns>TAA_ready_to_Transfer_Date__c</columns>
    <columns>Flex_HR_IS__c</columns>
    <columns>Flex_HR_ready_Transfer_Date__c</columns>
    <columns>SIPM_IPM__c</columns>
    <columns>PM_ready_to_Transfer_Date__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>MPSC_Status__c</field>
        <operation>contains</operation>
        <value>New,In Progress</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Reference_MPSC__c.Reference_MPSC_Transfer</value>
    </filters>
    <label>My MPSC Transfer Objects</label>
</ListView>