force-app/main/default/objects/Reference_MPSC__c/listViews/NMPSC_Team_3_Reference_MPSC.listView-meta.xml
<ListView>
    <fullName>NMPSC_Team_3_Reference_MPSC</fullName>
    <filterScope>Queue</filterScope>
    <label>NMPSC Team 3</label>
    <queue>NMPSC_Team_3</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>