force-app/main/default/objects/Reference_MPSC__c/listViews/PMPSC_942_Reference_MPSC.listView-meta.xml
<ListView>
    <fullName>PMPSC_942_Reference_MPSC</fullName>
    <filterScope>Queue</filterScope>
    <label>PMPSC 942</label>
    <queue>PMPSC_942</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>