force-app/main/default/objects/Reference_MPSC__c/listViews/PMPSC_Team_1_Reference_MPSC.listView-meta.xml
<ListView>
    <fullName>PMPSC_Team_1_Reference_MPSC</fullName>
    <filterScope>Queue</filterScope>
    <label>PMPSC Team 1</label>
    <queue>PMPSC_Team_1</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>